fix(nx): make react-router project publishable and buildable

--- a/nx.json
+++ b/nx.json
@@ -57,5 +57,10 @@
         "unitTestRunner": "none"
       }
     }
+  },
+  "pluginsConfig": {
+    "@nrwl/js": {
+      "analyzeSourceFiles": true
+    }
   }
 }
