--- a/packages/bindings/segue-react-router/project.json
+++ b/packages/bindings/segue-react-router/project.json
@@ -36,7 +36,7 @@
     "publish": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "node tools/scripts/publish.mjs segue-react-router {args.ver} {args.tag}"
+        "command": "node tools/scripts/publish.mjs bindings-segue-react-router {args.ver} {args.tag}"
       },
       "dependsOn": ["build"]
     }
