feat(licence): setup MIT licence

--- a/packages/bindings/segue-react-router/project.json
+++ b/packages/bindings/segue-react-router/project.json
@@ -29,6 +29,11 @@
             "glob": "packages/bindings/segue-react-router/README.md",
             "input": ".",
             "output": "."
+          },
+          {
+            "glob": "LICENCE",
+            "input": ".",
+            "output": "."
           }
         ]
       }
